BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Alert_Profile_vod__c.object
<CustomObject>
    <description>Stores the intersection of Alerts and Profiles that provide visibility to alerts.</description>
    <fields>
        <fullName>Alert_vod__c</fullName>
        <description>Reference to the parent alert.</description>
        <label>Alert</label>
        <referenceTo>Alert_vod__c</referenceTo>
        <relationshipLabel>Alert Profiles</relationshipLabel>
        <relationshipName>Alert_Profile_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key field that prevents duplicate profile from being added to the same alert</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Push_Notify_APNS_Datetime_vod__c</fullName>
        <description>Date/Time stamp of when the Scheduled Push Notification job processed the alert to the APNS for the profile</description>
        <label>Last Push Notify APNS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>Name of the profile that this record applies to</description>
        <label>Profile Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_vod__c</fullName>
        <description>ID of the profile that has visibility to the parent alert.</description>
        <label>Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Alert Profile</label>
    <nameField>
        <displayFormat>AP{00000000}</displayFormat>
        <label>Alert Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>